...
                                                               app:expandedTitleTextAppearance="@android:color/transparent"
                                                               android:fitsSystemWindows="true"
        >
            <ImageView
                    app:srcCompat="@drawable/eventplaceholder"
                    android:contentDescription="@string/image_of_added_area"
                    android:id="@+id/ViewAddedAreaImageView"
                    android:layout_height="365dp"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"/>

            <android.support.v7.widget.Toolbar
...
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/francis_tinashe_mudavanhu"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaOwnerText"
                            android:textColor="@color/colorPrimaryText"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="horizontal"
...
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/fake_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaAddressText"
                            android:textColor="@color/colorPrimaryText"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
...
                            android:padding="12dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_weight="9"
                            android:text="@string/fake_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/ViewAddedAreaDescText"
                            android:textColor="@color/colorPrimaryText"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
...
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                             android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
                                                            android:id="@+id/comment_recyclerView"
                                                            android:scrollbars="vertical"
                                                            android:layout_marginRight="8dp"
                                                            app:layout_constraintRight_toRightOf="parent"
                                                            android:layout_marginLeft="8dp"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            app:layout_constraintTop_toTopOf="parent"
...
                                                              android:orientation="horizontal">

                    <EditText android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="8"
                              android:padding="12dp" android:inputType="textMultiLine"
                              android:id="@+id/commentEditText"
                              android:hint="@string/write_a_comment"/>

                    <ImageButton android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="2"
                                 app:srcCompat="@android:drawable/ic_menu_send"
                                 android:elevation="0dp" android:tint="@color/colorWhite"
                                 android:scaleType="fitCenter" android:id="@+id/commentImageButton"
                                 android:backgroundTint="@color/colorPrimaryLight" android:contentDescription=""
                                 tools:ignore="ContentDescription"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/likeFloatingActionButton"
                                                        app:elevation="6dp"
                                                        android:src="@drawable/ic_white_fav"
                                                        app:pressedTranslationZ="12dp"
                                                        app:layout_anchor="@id/entertainmentAppBarLayout"
                                                        app:layout_anchorGravity="bottom|right|end"
                                                        android:layout_marginEnd="16dp"
...
