<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardUseCompatPadding="true" android:elevation="5dp"
                                    tools:layout_editor_absoluteY="72dp"
                                    tools:layout_editor_absoluteX="8dp" android:id="@+id/cardView2">

    <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                  android:orientation="horizontal"
                                                  android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:padding="12dp"
                                                      android:layout_weight="0.8"
                                                      android:orientation="horizontal">
            <ImageView
                    android:id="@+id/commentorProfileImageView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/default_avatar" android:contentDescription=""
                    tools:ignore="ContentDescription"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:padding="12dp"
                                                      android:layout_weight="0.2"
                                                      android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:layout_height="wrap_content"
                                                          android:id="@+id/linearLayout2"
                                                          android:orientation="vertical">

                <TextView android:layout_width="wrap_content"
                          android:id="@+id/commentorNameTextView"
                          android:text="@string/musa_rikhotso1"
                          android:textAlignment="textStart" android:textStyle="bold"
                          android:textSize="18sp" android:layout_height="wrap_content"
                          tools:ignore="TooDeepLayout"/>

                <MultiAutoCompleteTextView android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           android:id="@+id/commentMultiAutoCompleteTextView"
                                           android:focusable="false"
                                           android:layout_below="@+id/commentorNameTextView"
                                           android:text="I was here last week with my friends. The food was really amazing"
                                           tools:ignore="HardcodedText,LabelFor"/>

                <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                                                              android:orientation="vertical">

                    <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:orientation="horizontal">

                        <android.support.v7.widget.LinearLayoutCompat android:layout_width="0dp"
                                                                      android:layout_height="match_parent"
                                                                      android:layout_weight="4">
                            <TextView android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:gravity="center"
                                      android:id="@+id/dateTextView" android:text="@string/_2017_08_20_14_00pm"
                                      android:textSize="14sp"/>

                        </android.support.v7.widget.LinearLayoutCompat>

                        <android.support.v7.widget.LinearLayoutCompat android:layout_width="0dp"
                                                                      android:layout_height="match_parent"
                                                                      android:layout_weight="6">

                            <android.support.v7.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                                          android:layout_height="match_parent"
                                                                          android:orientation="horizontal"
                                                                          android:layout_weight="0"
                                                                          android:paddingStart="8dp"
                                                                          android:paddingEnd="8dp"
                                                                          android:paddingBottom="8dp"
                                                                          android:id="@+id/ownerLinearlayout">

                                <TextView android:layout_width="0dp"
                                          android:layout_height="match_parent"
                                          android:id="@+id/likeTextView"
                                          android:layout_weight="4" android:text="@string/likes"
                                          android:gravity="center"
                                          android:foregroundTint="@color/colorPrimaryLight"
                                          android:textColor="@color/colorPrimary" android:textSize="18sp"
                                          tools:targetApi="m" android:textAlignment="textStart"
                                          tools:ignore="RtlCompat"/>

                                <TextView
                                        android:layout_gravity="center_vertical"
                                        android:textAppearance="?android:attr/textAppearanceMedium"
                                        android:layout_weight="6"
                                        android:paddingStart="5dp"
                                        android:paddingEnd="5dp"
                                        android:gravity="center"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:id="@+id/likeCommentCounterTextView"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="18sp"
                                        android:textColorHighlight="@color/colorPrimary" android:text="@string/_22"
                                        tools:ignore="SpUsage"/>
                            </android.support.v7.widget.LinearLayoutCompat>

                            <android.support.v7.widget.LinearLayoutCompat android:layout_width="wrap_content"
                                                                          android:layout_height="wrap_content"
                                                                          android:orientation="horizontal"
                                                                          android:gravity="center"
                                                                          android:layout_weight="0.5">

                                <ImageButton android:layout_width="30dp"
                                             android:layout_height="34dp"
                                             tools:ignore="ContentDescription"
                                             app:srcCompat="@android:drawable/ic_menu_delete"
                                             android:background="@drawable/com_facebook_auth_dialog_background"
                                             android:backgroundTint="@color/cardview_light_background"
                                             android:tint="@color/cardview_shadow_start_color"
                                             android:id="@+id/deleteCommentImageButton"/>

                            </android.support.v7.widget.LinearLayoutCompat>

                        </android.support.v7.widget.LinearLayoutCompat>

                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="75dp"
            android:layout_height="81dp"
            android:id="@+id/progressBar2"/>

</android.support.v7.widget.CardView>
