<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/ProfileToolbar2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_width="0dp"
            tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="490dp" android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ProfileToolbar2" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/displayNameTextView"
                android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                android:textAlignment="textStart" android:textStyle="bold" android:textSize="24sp"
                android:fontFamily="sans-serif-condensed" android:textColor="@color/colorPrimaryText"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none|textMultiLine"
                android:text="@string/name_nsfvvashfhjgafjag" android:ems="10"
                android:focusable="false"
                android:id="@+id/describeEditText"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" android:selectAllOnFocus="true"
                android:textAlignment="center" android:textSize="18sp" tools:ignore="LabelFor"/>
        <TextView
                android:text="@string/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullNameTextView" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:textAlignment="textStart" android:textSize="24sp"
                android:fontFamily="serif" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textColor="@color/colorPrimaryText"/>
        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView2"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:civ_border_width="4dp"
                app:civ_border_color="#FF000000"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/displayNameTextView" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

    </android.support.constraint.ConstraintLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="165dp"
            android:layout_height="161dp"
            android:id="@+id/ViewProfileProgressBar3" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintVertical_bias="0.284"/>

</android.support.constraint.ConstraintLayout>