<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.socialteinc.socialate.BookmarkActivity"
    android:id="@+id/activity_bookmark"
>

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/bookmarkPageToolBar" app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content" android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/entertainmentSpotRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="-1dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bookmarkPageToolBar" />
</android.support.constraint.ConstraintLayout>
